--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Amr</title>
 		<meta charste ="UTF-8" />
+		<link rel= 'sylesheet' href="css/normalize.css"/>
 		<link rel='stylesheet' href="style.css"/>
 		<!-- media Workimg -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +11,105 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;500;800&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/4e62d85256.js" crossorigin="anonymous"></script>
+
 	</head>
 	<body>
-		<p>welcome world</p>
-		<p>welcome world</p>
+		<div class="top-header">
+			<div class="container">
+				<h1 class="main-head">I'm Amr Khairy</h1>
+				<div class="info">
+					<img src="media/me.jpg"/>
+					<p> I'm amr khairy, leaved in damitta, I'm learing long life
+					I'm amr khairy, leaved in damitta, I'm learing long life
+					I'm amr khairy, leaved in damitta, I'm learing long life </p>
+				</div>
+			</div>
+		</div>
+		<div class="skills">
+			<h1 class="main-head">Skills</h1>
+			<div class="container">
+				<div class="img"><img src="media/html0.png"/><span></span></div>
+				<div class="img"><img src="media/css.png"/><span></span></div>
+				<div class="img"><img src="media/sass.png"/><span></span></div>
+				<div class="img"><img src="media/javascript.png"/><span></span></div>
+			</div>
+		</div>
+		
+		<div class="projects">
+			<h1 class="main-head">projects</h1>
+			<div class="container">
+				<div class="main">
+					<div class="click">
+						<img src="media/learn.png"/>
+						<div>
+							<a href="#">See This</a>
+						</div>
+					</div>
+					<div class="click">
+						<img src="media/e-service.png"/>
+						<div>
+							<a href="#">See This</a>
+						</div>
+					</div>
+					<div class="click">
+						<img src="media/shop.png"/>
+						<div>
+							<a href="#">See This</a>
+						</div>
+					</div>
+					<div class="click">
+						<img src="media/markting.png"/>
+						<div>
+							<a href="#">See This</a>
+						</div>
+					</div>
+				</div>
+		
+			</div>
+		</div>
+		<!-- End Projects-->
+		<!-- Start Contact-->
+		<div class="contact">
+			<div class="container">
+				<label>
+					<i class="far fa-user"></i>
+					<input type="text" placeholder="Name">
+				</label>				
+				<label>
+					<i class="far fa-envelope"></i>
+					<input type="text" placeholder="Email">
+				</label>				
+				<label>
+					<i class="fas fa-comment-medical"></i>
+					<textarea placeholder="Massage" ></textarea/>
+				</label>
+				<button type="submit">Send</button>
+			</div>
+		</div>
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+		<path fill="#0099ff" fill-opacity="1" d="M0,96L120,106.7C240,117,480,139,720,128C960,117,1200,75,1320,53.3L1440,32L1440,0L1320,0C1200,0,960,0,720,0C480,0,240,0,120,0L0,0Z"></path></svg>
+		<!-- End Contac-->
+		<!-- Start Footet-->
+		<div class="footer">
+			<h1 class="main-head">Contact Me</h1>
+			<div class="container">
+				<div class="svg-left">
+				</div>
+				<div class="svg-right">
+				</div>
+				<div class="link">
+					<a href="#">in</a>
+					<a href="#">F</a>
+					<a href="#"><i class="fas fa-envelope"></i></a>
+					<a class="whatsapp" href="#"><i class="fab fa-whatsapp"></i></a>
+				</div>
+				<p>© 2022Copy Right<br> mead by amr khairy</p>
+			</div>
+		</div>
+		<!-- End Footer-->
 	</body>
+</html>
